--- a/ProyectoWEB/client/public/manifest.json
+++ b/ProyectoWEB/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Fukusuke",
+  "name": "Create React Fukusuke",
   "icons": [
     {
       "src": "favicon.ico",
